@startuml

package domain {
  package model {
    class Account
  }

  interface AccountRepository {
    + findLoginUser(): Account?
    + findByUsername(username: Username): Account?
    + create(...)
    + update(...)
  }

  interface GetLoginUserService {
    + execute(): Account?
  }

  interface StatusRepository {
    + create(...): Status
  }
}

package infra {
  package domain {
    package repository {
      class AccountRepositoryImpl {
        - loginUserPreference: LoginUserPreference
        - yatterApi: YatterApi
      }

      class StatusRepositoryImpl {
        - loginUserPreference: LoginUserPreference
        - yatterApi: YatterApi
      }
    }
    package service {
      class GetLoginUserServiceImpl {
        - accountRepository: AccountRepository
      }
    }
  }
}

package usecase {
  interface PostStatusUseCase {
    + execute(statusText: String): PostStatusUseCaseResult
  }

  class PostStatusUseCaseImpl {
    - statusRepository: StatusRepository
  }

  class PostStatusUseCaseResult
}

package ui.post {
  class PostViewModel {
    - postStatusUseCase: PostStatusUseCase
    - getLoginUserService: GetLoginUserServiceImpl

    + uiState: StateFlow<PostUiState>
    + destination: StateFlow<Destination?>

    + onCreate()
    + onChangedStatusText(statusText: String)
    + onClickPost()
    + onClickNavIcon()
    + onCompleteNavigation()
  }

  class PostUiState {
    + bindingModel: PostBindingModel
    + isLoading: Boolean
    + canPost: Boolean
  }

  class PostBindingModel {
    + avatarUrl: String?
    + statusText: String
  }
}

GetLoginUserService -- Account

GetLoginUserServiceImpl --|> GetLoginUserService
AccountRepositoryImpl --|> AccountRepository
StatusRepositoryImpl --|> StatusRepository

GetLoginUserService -- AccountRepository

PostStatusUseCaseImpl --|> PostStatusUseCase
PostStatusUseCase -- PostStatusUseCaseResult
PostStatusUseCaseImpl -- StatusRepository

PostViewModel -- PostUiState
PostUiState -- PostBindingModel

PostViewModel -- PostStatusUseCase
PostViewModel -- GetLoginUserService
@enduml